--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,16 +26,62 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some(function(person){
+    const currentYear = (new Date()).getFullYear();
+      if(currentYear - person.year >=19) {
+        return true;
+      }
+    });
+    console.log({isAdult});
+
+    //condensed way
+    const isAdultS = people.some(person=>{
+       const currentYear = (new Date()).getFullYear();
+       return currentYear - person.year >=19;
+    });
+    console.log({isAdultS});
+
+   //evenmore condensed
+    const isAdultSS = people.some(person=> ((new Date()).getFullYear())- person.year >=19);
+    console.log({isAdultSS});
+
+
+
+
     // Array.prototype.every() // is everyone 19 or older?
+  const allAdultSS = people.every(person=> ((new Date()).getFullYear())- person.year >=19);
+  console.log({allAdultSS});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const comment = comments.find(function(comment){
+      if (comment.id === 823423) {
+        return true;
+      }
+    });
+    console.log(comment);
+
+    //condensed
+  const commentSS = comments.find(comment=> comment.id === 823423);
+     console.log(commentSS);
+
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const index = comments.findIndex(comment=> comment.id===823423);
+    console.log({index});
+//    comments.splice(index, 1);
+    
 
+    //instead of splice - create a new array by doing this - 
+    const newComments = [
+      ...comments.slice(0,index),
+      ...comments.slice(index+1)
+    ];
+    console.table(comments);
+    console.table(newComments);
   </script>
 </body>
 </html>
