--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,64 @@
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
-
+    console.log('hello i am a %s string', 'aasdf');
     // Styled
+    console.log('%cI am text','font-size:50px');
 
     // warning!
+    console.warn('oh noo');
+
 
     // Error :|
+    console.error('damn');
+
 
     // Info
+    console.info('damn');
+    
+    // Testing - if fails, you get the error message
+    const p = document.querySelector('p');
+    console.assert(1===2,'not equal');
 
-    // Testing
-
-    // clearing
+      // clearing - clears all console entries before this.
+    console.clear()
 
     // Viewing DOM Elements
-
+    console.log(p);
+    console.dir(p);
+    
     // Grouping together
+    dogs.forEach(dog =>{
+      console.groupCollapsed (`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} in dog years`);
+      console.groupEnd (`${dog.name}`);
+
+    });
+
 
     // counting
+    console.count('david');
+    console.count('david');
+    console.count('david');
+    console.count('david');
+    console.count('Kari');
+    console.count('Kari');
+
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/wesbos')
+    .then(data =>data.json())
+    .then(data=>{
+      console.timeEnd('fetching data');
+      console.log(data)
+    });
+
+    console.table(dogs);
 
   </script>
 </body>
