--- a/15 - LocalStorage/index-START.1.html
+++ b/15 - LocalStorage/index-START.1.html
@@ -28,49 +28,8 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
+  const items = [];
 
-  //this looks to see if there are any items
-  const items = JSON.parse(localStorage.getItem('items'))||[];
-
-
-  function addItem(e){
-    e.preventDefault();
-    console.log('hi');
-    const text = (this.querySelector('[name=item]')).value;
-    const item ={   
-      text,
-      done: false
-    }
-
-      console.log(item);
-      items.push(item);
-      populateList(items,itemsList);
-      localStorage.setItem('items',JSON.stringify(items));
-      this.reset();
-  }
-
-function populateList(plates=[],platesList){
-  platesList.innerHTML = plates.map((plate,i)=>{
-  return `
-    <li>
-      <input type="checkbox" data-index=${i} id="items${i}" ${plate.done ? 'checked':''} </>
-      <label for="items${i}">${plate.text}</label>
-    </li>
-    `;
-}).join('');
-
-}
-
-function toggleDone(e){
-
-}
-
-const checkBoxes = document.querySelectorAll('input');
-checkBoxes.forEach(input=> input.addEventListener('click',()=> alert('hi')));
-
-  addItems.addEventListener('submit',addItem);
-
-  populateList(items, itemsList);
 </script>
 
 
